# LifeStyle-project

./: .gitignore  README.md  package-lock.json  pyproject.toml  requests.http  requirements.txt  vercel.json
api/: index.py
app/: __init__.py  db.py  main.py  models.py
app/core/: auth.py  config.py  langchain_config.py
app/services/: chat_orchestrator.py  dday.py  models.py  tmdb.py  tool_registry.py
docs/: jwt-auth-troubleshooting.md  jwt-hs256-migration-guide.md
docs/design/: data-flow.md  tool-prompt.md
docs/ideas/: community-calendar.md
docs/requirements/: llm-dday.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatPanel.tsx  DdayPanel.tsx  Header.tsx  LandingPage.tsx  SharedDdayCard.tsx
frontend/src/hooks/: use-auth.ts  use-dday.ts
frontend/src/lib/: supabase.ts
frontend/src/styles/: index.css
tests/: test_dday_service.py
