[project]
name = "dday-backend"
version = "0.1.0"
description = "Chat-based D-day and waiting room service"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "pydantic",
  "pydantic-settings",
  "alembic",
  "httpx",
  "openai",
  "langchain",
  "langchain-openai",
  "pyyaml",
  "psycopg2-binary",
  "PyJWT",
]

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.isort]
combine-as-imports = true

[tool.setuptools]
packages = ["app"]

